remove height restriction in modals to prevent weird scrollbars

--- a/app/components/modals/ModalComponentBody.module.scss
+++ b/app/components/modals/ModalComponentBody.module.scss
@@ -15,7 +15,6 @@
 
   .body {
     width: 100%;
-    max-height: 70vh;
     overflow-x: hidden;
     overflow-y: auto;
   }
